--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^4.3.1",
     "react-minimal-pie-chart": "^8.3.0",
     "react-query": "^3.39.3",
+    "react-toastify": "^9.1.3",
     "react-tooltip": "^4.2.21",
     "reactjs-popup": "^2.0.5",
     "viem": "^1.16.6",
