--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-toastify": "^9.1.3",
     "react-tooltip": "^4.2.21",
     "reactjs-popup": "^2.0.5",
+    "use-debounce": "^9.0.4",
     "viem": "^1.16.6",
     "wagmi": "^1.4.4",
     "web3": "^4.2.0"
